@@ -24,7 +24,6 @@ import org.apache.kafka.tiered.storage.TieredStorageTestBuilder;
 import org.apache.kafka.tiered.storage.TieredStorageTestHarness;
 import org.apache.kafka.tiered.storage.specs.KeyValueSpec;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -48,8 +47,8 @@ public class FetchFromLeaderWithCorruptedCheckpointTest extends TieredStorageTes
         final Integer replicationFactor = 2;
         final Integer maxBatchCountPerSegment = 1;
         final boolean enableRemoteLogStorage = true;
-        final Map<Integer, List<Integer>> assignment = mkMap(mkEntry(p0, Arrays.asList(broker0, broker1)));
-        final List<String> checkpointFiles = Arrays.asList(
+        final Map<Integer, List<Integer>> assignment = mkMap(mkEntry(p0, List.of(broker0, broker1)));
+        final List<String> checkpointFiles = List.of(
                 ReplicaManager.HighWatermarkFilename(),
                 LogManager.RecoveryPointCheckpointFile(),
                 CleanShutdownFileHandler.CLEAN_SHUTDOWN_FILE_NAME);
